Finished basic autoencoder with MNIST

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,5 +8,6 @@
             "extensions": ["ms-python.python",
                            "formulahendry.code-runner"]
         }
-    }
+    },
+    "runArgs": ["--gpus", "all"]
 }
