--- a/.dvc/config
+++ b/.dvc/config
@@ -2,4 +2,4 @@
     remote = arc
 [remote "arc"]
     url = ssh://cayden.murray@arc.ucalgary.ca:/home/cayden.murray/data
-    keyfile = C:\\Users\\cayde\\.ssh\\arc
+    keyfile = C:\\Users\\Cayden\\.ssh\\arc
